recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not found: value step
	while(step>0){
              ^