recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps==0){return}
	else{
		avance(length:Double)
	while(step>0){
gauche(angle:Double)
avance(length*shrink)
recule(length*shrink:Double)
droite(2*angle:Double)
avance(length*shrink)
getX():Double
getY():Double
recule(length*shrink)
gauche(2*angle:Double)
avance(length*shrink)
tree(steps-1,length*shrink,angle,shrink*shrink)
}
}
}

